Actualizare interfata website
